--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tsconfig/node16": "^1.0.3",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.5",
+    "@types/signale": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
@@ -30,5 +31,13 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "awilix": "^8.0.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^6.0.0",
+    "signale": "^1.4.0"
   }
 }
