--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.5",
     "@types/signale": "^1.4.4",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "awilix": "^8.0.0",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
