--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     restart: unless-stopped
     volumes:
       - "/dev/net/tun:/dev/net/tun"
+    ports:
+      - ${HTTP_PORT}:${HTTP_PORT}
     privileged: true
     network_mode: "host"
     cap_add:
