--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
+    "changeset": "changeset",
+    "publish": "changeset tag",
+    "version": "changeset version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -34,6 +37,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@changesets/cli": "^2.25.2",
     "awilix": "^8.0.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
