--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,8 @@ dist
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/codeStyleConfig.xml
+.idea/**/Project.xml
 
 # AWS User-specific
 .idea/**/aws.xml
